--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Timos-Design/fonts@1.0.0/style.css">
 
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js"></script> -->
   <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
 
   <!-- Primary Meta Tags -->
