update page title, description, added social media previews and app logo

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, viewport-fit=cover" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="application-name" content="Agile Alligators" />
-  <meta name="apple-mobile-web-app-title" content="Agile Alligators" />
+  <meta name="application-name" content="Ligenium Track+" />
+  <meta name="apple-mobile-web-app-title" content="Ligenium Track+" />
   <meta name="msapplication-starturl" content="./" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
@@ -79,22 +79,22 @@
   <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
 
   <!-- Primary Meta Tags -->
-  <title>Home | Agile Alligators</title>
-  <meta name="title" content="Home | Agile Alligators" />
-  <meta name="description" content="TODO:" />
+  <title>Home | Ligenium Track+</title>
+  <meta name="title" content="Home | Ligenium Track+" />
+  <meta name="description" content="Smart software solution for tracking and displaying relevant information about changes your company's carriers" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://agilealligators.timos.design/" />
-  <meta property="og:title" content="Home | Agile Alligators" />
-  <meta property="og:description" content="TODO:" />
+  <meta property="og:title" content="Home | Ligenium Track+" />
+  <meta property="og:description" content="Smart software solution for tracking and displaying relevant information about changes your company's carriers" />
   <meta property="og:image" content="/pwa/splash/apple-splash-2688-1242.jpg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://agilealligators.timos.design/" />
-  <meta property="twitter:title" content="Home | Agile Alligators" />
-  <meta property="twitter:description" content="TODO:" />
+  <meta property="twitter:title" content="Home | Ligenium Track+" />
+  <meta property="twitter:description" content="Smart software solution for tracking and displaying relevant information about changes your company's carriers" />
   <meta property="twitter:image" content="/pwa/splash/apple-splash-2688-1242.jpg" />
 </head>
 
